test/errors/scope-resolution/redefinition/redefinition-def-with-public-import.chpl
module Lib1 {
  var a: int;
}
module T2 {
  public import Lib1.a;
  var a: real;
  proc main() { }
}
